[gd_scene load_steps=40 format=3 uid="uid://s72gvn2mqhx2"]

[ext_resource type="Texture2D" uid="uid://8n821btsns0g" path="res://Assets/Sprites/firstscene.png" id="1_28flt"]
[ext_resource type="Script" uid="uid://cp5a513ucxy6r" path="res://Scripts/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Texture2D" uid="uid://bgs2sn1qmqdrc" path="res://Assets/Sprites/ADVADLOGODEF.png" id="2_1ehe0"]
[ext_resource type="Shader" uid="uid://lffl0flh7g82" path="res://Shaders/CRT.gdshader" id="2_48xlc"]
[ext_resource type="PackedScene" uid="uid://cwrkymd0iykky" path="res://Scenes/abduction.tscn" id="2_trj04"]
[ext_resource type="PackedScene" uid="uid://b3erfay7mn45e" path="res://Scenes/skin_selector.tscn" id="3_5n0dv"]
[ext_resource type="Texture2D" uid="uid://3m1orbh60ase" path="res://Assets/Sprites/specialthanksbutton.png" id="5_m3bi6"]
[ext_resource type="Texture2D" uid="uid://bp74cmhcbg21i" path="res://Assets/Sprites/playbutton.png" id="5_opfnp"]
[ext_resource type="FontFile" uid="uid://brqe7mn55rnpq" path="res://Assets/Fonts/Kenney Pixel.ttf" id="5_vr1f0"]
[ext_resource type="Texture2D" uid="uid://d27ed1pl0byje" path="res://Assets/Sprites/playbuttonhover.png" id="6_cp0ys"]
[ext_resource type="Texture2D" uid="uid://ddpugxe2tluy5" path="res://Assets/Sprites/specialthanksbuttonhover.png" id="6_wyh8j"]
[ext_resource type="Texture2D" uid="uid://cvt1ilue7b0ys" path="res://Assets/Sprites/discordpixelicon.png" id="7_mkpwh"]
[ext_resource type="Texture2D" uid="uid://duc8rjasfhdl3" path="res://Assets/Sprites/quitbutton.png" id="7_yhxw7"]
[ext_resource type="Texture2D" uid="uid://c80ak2c0el2pn" path="res://Assets/Sprites/discordpixeliconhover.png" id="8_4nkqq"]
[ext_resource type="Texture2D" uid="uid://3t8pj8h4rows" path="res://Assets/Sprites/quitbuttonhover.png" id="8_trj04"]
[ext_resource type="Texture2D" uid="uid://c0b8fbs27w4o4" path="res://Assets/Sprites/creditsbutton.png" id="9_5egv6"]
[ext_resource type="Texture2D" uid="uid://bkdv1633hq14x" path="res://Assets/Sprites/fullscreenbutton.png" id="9_jr6u5"]
[ext_resource type="Texture2D" uid="uid://lnq6a0woe0n8" path="res://Assets/Sprites/fullscreenbuttonhover.png" id="10_6m47u"]
[ext_resource type="AudioStream" uid="uid://cymml2savhmwu" path="res://Assets/Audio/344297__musiclegends__blip_select46.wav" id="10_16hvj"]
[ext_resource type="Texture2D" uid="uid://c1let3csoxgfl" path="res://Assets/Sprites/creditsbuttonhover.png" id="10_vtepg"]
[ext_resource type="Texture2D" uid="uid://bkumdi5oetady" path="res://Assets/Sprites/fullscreenbuttonhover1.png" id="11_84iac"]
[ext_resource type="Texture2D" uid="uid://b5cdor227lduo" path="res://Assets/Sprites/ship_button.png" id="12_84iac"]
[ext_resource type="Texture2D" uid="uid://dkfi27m653fqi" path="res://Assets/Sprites/ship_button_hover.png" id="13_5n0dv"]
[ext_resource type="PackedScene" uid="uid://cj563pbrl44fc" path="res://Scenes/credits.tscn" id="14_vtepg"]
[ext_resource type="PackedScene" uid="uid://ctpfllc068qt6" path="res://Scenes/special_thanks.tscn" id="17_wyh8j"]
[ext_resource type="AudioStream" uid="uid://e74mglwo351x" path="res://Assets/Audio/610282__brickdeveloper171__activate-2.wav" id="18_4nkqq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_48xlc"]
atlas = ExtResource("1_28flt")
region = Rect2(0, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehe0"]
atlas = ExtResource("1_28flt")
region = Rect2(100, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce3w2"]
atlas = ExtResource("1_28flt")
region = Rect2(200, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_n45e2"]
atlas = ExtResource("1_28flt")
region = Rect2(300, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_opfnp"]
atlas = ExtResource("1_28flt")
region = Rect2(400, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp0ys"]
atlas = ExtResource("1_28flt")
region = Rect2(500, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhxw7"]
atlas = ExtResource("1_28flt")
region = Rect2(600, 0, 100, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_trj04"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48xlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ehe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce3w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opfnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp0ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhxw7")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mkpwh"]
font = ExtResource("5_vr1f0")
font_size = 20
font_color = Color(0, 0.30980393, 0.30980393, 1)
outline_size = 2
outline_color = Color(0, 1, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0.21176471, 0.21176471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t1dhk"]
font = ExtResource("5_vr1f0")
font_size = 20
font_color = Color(0, 0.30910987, 0.3091098, 1)
outline_size = 2
outline_color = Color(0, 1, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0.21176471, 0.21176471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4nkqq"]
font = ExtResource("5_vr1f0")
font_size = 20
font_color = Color(0, 0.30980393, 0.30980393, 1)
outline_size = 2
outline_color = Color(0, 1, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0.21176471, 0.21176471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ehtkc"]
font = ExtResource("5_vr1f0")
font_size = 20
font_color = Color(0, 0.30980393, 0.30980393, 1)
outline_size = 2
outline_color = Color(0, 1, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0.21176471, 0.21176471, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ehe0"]
shader = ExtResource("2_48xlc")
shader_parameter/overlay = true
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/brightness = 3.0
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.03
shader_parameter/grille_opacity = 0.2
shader_parameter/roll = true
shader_parameter/roll_speed = 3.0
shader_parameter/roll_size = 10.000000475
shader_parameter/roll_variation = 0.5
shader_parameter/distort_intensity = 0.02
shader_parameter/aberration = 0.01000004797499998
shader_parameter/noise_opacity = 0.311
shader_parameter/noise_speed = 2.0
shader_parameter/static_noise_intensity = 0.0
shader_parameter/pixelate = false
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.150000007125
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.5
shader_parameter/vignette_opacity = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_ce3w2")
next_scene = ExtResource("2_trj04")
skin_selector_scene = ExtResource("3_5n0dv")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(258.99997, 529)
scale = Vector2(5.373841, 5.373841)
sprite_frames = SubResource("SpriteFrames_trj04")
autoplay = "default"
frame = 4
frame_progress = 0.37111983

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(246.99998, 108)
scale = Vector2(1.4800006, 1.4800006)
texture = ExtResource("2_1ehe0")

[node name="SpecialThanksButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 189.0
offset_right = 330.0
offset_bottom = 219.0
texture_normal = ExtResource("5_m3bi6")
texture_hover = ExtResource("6_wyh8j")

[node name="DiscordButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 134.0
offset_right = 1084.0
offset_bottom = 1158.0
scale = Vector2(0.05017208, 0.05017208)
texture_normal = ExtResource("7_mkpwh")
texture_hover = ExtResource("8_4nkqq")

[node name="FullScreenButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 296.00003
offset_top = 143.00002
offset_right = 341.00003
offset_bottom = 188.00002
scale = Vector2(0.8175782, 0.8175782)
toggle_mode = true
texture_normal = ExtResource("9_jr6u5")
texture_pressed = ExtResource("10_6m47u")
texture_hover = ExtResource("11_84iac")

[node name="SkinSelectorButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 148.0
offset_right = 359.0
offset_bottom = 178.0
scale = Vector2(0.7554791, 0.7554791)
texture_normal = ExtResource("12_84iac")
texture_hover = ExtResource("13_5n0dv")

[node name="DiscordLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 175.0
offset_right = 138.0
offset_bottom = 191.0
scale = Vector2(0.69024044, 0.69024044)
text = "JOIN DISCORD!"
label_settings = SubResource("LabelSettings_mkpwh")

[node name="CreditsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 225.0
offset_right = 486.0
offset_bottom = 248.0
text = "ANGELUS11 - 2025"
label_settings = SubResource("LabelSettings_t1dhk")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 244.0
offset_right = 422.0
offset_bottom = 267.0
text = "0.0.0.4"
label_settings = SubResource("LabelSettings_4nkqq")

[node name="EngineLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 233.0
offset_right = 165.0
offset_bottom = 256.0
text = "MADE WITH GODOT ENGINE"
label_settings = SubResource("LabelSettings_ehtkc")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UILayer"]
material = SubResource("ShaderMaterial_1ehe0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1907.0
offset_top = -1715.0
offset_right = 1414.0
offset_bottom = 3796.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 212.00002
offset_top = 140.0
offset_right = 262.0
offset_bottom = 208.0
scale = Vector2(1.829739, 1.829739)

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_opfnp")
texture_hover = ExtResource("6_cp0ys")

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_5egv6")
texture_hover = ExtResource("10_vtepg")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_yhxw7")
texture_hover = ExtResource("8_trj04")

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_16hvj")
pitch_scale = 0.5
bus = &"SFX"

[node name="BackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_4nkqq")
bus = &"SFX"

[node name="ScrollTimer" type="Timer" parent="."]
wait_time = 34.0
one_shot = true
autostart = true

[node name="CreditsPanel" parent="." instance=ExtResource("14_vtepg")]
visible = false
layout_mode = 1

[node name="SpecialThanksPanel" parent="." instance=ExtResource("17_wyh8j")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="SpecialThanksButton" to="." method="_on_special_thanks_button_mouse_entered"]
[connection signal="mouse_entered" from="DiscordButton" to="." method="_on_discord_button_mouse_entered"]
[connection signal="mouse_entered" from="FullScreenButton" to="." method="_on_full_screen_button_mouse_entered"]
[connection signal="mouse_entered" from="SkinSelectorButton" to="." method="_on_skin_selector_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="timeout" from="ScrollTimer" to="." method="_on_scroll_timer_timeout"]
